--- a/package.json
+++ b/package.json
@@ -17,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/yasminadaileh1/city-explorer/issues"
   },
-  "homepage": "https://github.com/yasminadaileh1/city-explorer#readme"
+  "homepage": "https://github.com/yasminadaileh1/city-explorer#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "pg": "^8.0.0",
+    "superagent": "^5.2.2"
+  }
 }
